# atdf2svd

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: chip.rs  cli.rs  elementext.rs  error.rs  lib.rs  main.rs  util.rs
src/atdf/: chip.rs  error.rs  field.rs  interrupt.rs  mod.rs  patch.rs  peripheral.rs  register.rs  register_group.rs  values.rs
src/svd/: chip.rs  field.rs  interrupt.rs  mod.rs  peripheral.rs  register.rs  restriction.rs
tests/: atxmega128a1.atdf  regression.rs
tests/snapshots/: regression__atmega128rfa1.snap  regression__atmega328p.snap  regression__atmega328p_ports_renamed.snap  regression__atmega328p_unsafe_nofuse.snap  regression__atmega4809.snap  regression__attiny817.snap  regression__atxmega128a1.snap
