[package]
name = "atdf2svd"
version = "0.3.2"
authors = ["Rahix <rahix@rahix.de>"]
description = "Tool to convert Atmel's ATDF files to SVD"
readme = "README.md"
license = "GPL-3.0-only"
documentation = "https://github.com/Rahix/atdf2svd"
homepage = "https://github.com/Rahix/atdf2svd"
repository = "https://github.com/Rahix/atdf2svd"
keywords = ["atdf", "svd", "avr", "svd2rust"]
categories = ["command-line-utilities", "embedded"]
edition = "2018"

[dependencies]
xmltree = "0.8.0"
colored = "1.8.0"
log = "0.4.6"
env_logger = "0.7.1"
gumdrop = "0.8.0"
git-version = "0.3.4"
svd-rs = "0.14.0"
svd-encoder = "0.14.1"
