[package]
name = "atdf2svd"
version = "0.3.3"
authors = ["Rahix <rahix@rahix.de>"]
description = "Tool to convert Atmel's ATDF files to SVD"
readme = "README.md"
license = "GPL-3.0-only"
documentation = "https://github.com/Rahix/atdf2svd"
homepage = "https://github.com/Rahix/atdf2svd"
repository = "https://github.com/Rahix/atdf2svd"
keywords = ["atdf", "svd", "avr", "svd2rust"]
categories = ["command-line-utilities", "embedded"]
edition = "2018"

exclude = [
    "tests/",
    ".github/",
]

[dependencies]
xmltree = "0.10.3"
colored = "2.0.0"
log = "0.4.17"
env_logger = "0.10.0"
gumdrop = "0.8.1"
git-version = "0.3.5"
svd-rs = "0.14.1"
svd-encoder = "0.14.2"

[dev-dependencies]
insta = { version = "1.24.1", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
