[package]
name = "atdf2svd"
version = "0.6.0"
authors = ["Rahix <rahix@rahix.de>"]
description = "Tool to convert Atmel's ATDF files to SVD"
readme = "README.md"
license = "GPL-3.0-only"
documentation = "https://github.com/Rahix/atdf2svd"
homepage = "https://github.com/Rahix/atdf2svd"
repository = "https://github.com/Rahix/atdf2svd"
keywords = ["atdf", "svd", "avr", "svd2rust"]
categories = ["command-line-utilities", "embedded"]
edition = "2024"

exclude = [
    "tests/",
    ".github/",
]

[[bin]]
name = "atdf2svd"
required-features = ["cli"]

[features]
cli = ["dep:colored", "dep:env_logger", "dep:gumdrop", "dep:git-version"]
default = ["cli"]

[dependencies]
xmltree = "0.10.3"
colored = { version = "3.0.0", optional = true }
log = "0.4.22"
env_logger = { version = "0.11.5", optional = true }
gumdrop = { version = "0.8.1", optional = true }
git-version = { version = "0.3.5", optional = true }
svd-rs = "0.14.1"
svd-encoder = "0.14.2"
cfg-if = "1.0.4"

[dev-dependencies]
insta = { version = "1.44.3", features = ["yaml"] }

[profile.dev]
panic = "abort"

[profile.release]
overflow-checks = true
panic = "abort"

[profile.test.package.insta]
opt-level = 3

[profile.test.package.similar]
opt-level = 3
